--- a/Demo/UIKit/Demo/Info.plist
+++ b/Demo/UIKit/Demo/Info.plist
@@ -64,6 +64,8 @@
 	</array>
 	<key>NSCalendarsUsageDescription</key>
 	<string>The app needs access to your calendar to add upcoming shows.</string>
+	<key>NSCalendarsWriteOnlyAccessUsageDescription</key>
+	<string>The app needs access to your calendar to add upcoming shows.</string>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
 </dict>
