--- a/Demo/SwiftUI/Demo/Info.plist
+++ b/Demo/SwiftUI/Demo/Info.plist
@@ -24,6 +24,8 @@
 	<true/>
 	<key>NSCalendarsUsageDescription</key>
 	<string>The app needs access to your calendar to add upcoming shows.</string>
+	<key>NSCalendarsWriteOnlyAccessUsageDescription</key>
+	<string>The app needs access to your calendar to add upcoming shows.</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
